--- a/formularioa.html
+++ b/formularioa.html
@@ -47,6 +47,31 @@
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="pertsonalizatzailea.html">Pertsonalizatzailea</a></li>
+            <li><a href="formularioa.html">Formularioa</a></li>
+            <li><a href="irudiak.html">Irudiak</a></li>
+            </ul>
+        </nav>
+        <main>
+            <div class="customizer">
+                <span>atzeko_kolorea</span>
+                <div class="color-options">
+                    <button class="color red"></button>
+                    <button class="color green"></button>
+                    <button class="color white"></button>
+                    <button class="color black"></button>
+                </div>
+                <span>aldatu_letrak</span>
+                <div class="font-options">
+                    <button class="color red"></button>
+                    <button class="color blue"></button>
+                    <button class="color black"></button>
+                    <button class="color white"></button>
+                </div>
+            </div>
+        </main>
     <form action="#" method="post">
         <label for="nombre">Izen osoa:</label>
         <input type="text" id="izenaososa" name="izenosoa" required placeholder="Sartzazu zure izen osoa">
@@ -81,6 +106,30 @@
 
         <button type="submit">Bidalia</button>
     </form>
-
+<nav>
+    <ul>
+        <li><a href="pertsonalizatzailea.html">Pertsonalizatzailea</a></li>
+        <li><a href="formularioa.html">Formularioa</a></li>
+        <li><a href="irudiak.html">Irudiak</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="customizer">
+            <span>atzeko_kolorea</span>
+            <div class="color-options">
+                <button class="color red"></button>
+                <button class="color green"></button>
+                <button class="color white"></button>
+                <button class="color black"></button>
+            </div>
+            <span>aldatu_letrak</span>
+            <div class="font-options">
+                <button class="color red"></button>
+                <button class="color blue"></button>
+                <button class="color black"></button>
+                <button class="color white"></button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
