--- a/formularioa.html
+++ b/formularioa.html
@@ -11,7 +11,7 @@
         }
 
         form {
-            background-color: #f9f9f9;
+            background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -33,7 +33,7 @@
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: white;
             color: white;
             border: none;
             padding: 10px 15px;
@@ -42,36 +42,12 @@
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: white;
         }
     </style>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="pertsonalizatzailea.html">Pertsonalizatzailea</a></li>
-            <li><a href="formularioa.html">Formularioa</a></li>
-            <li><a href="irudiak.html">Irudiak</a></li>
-            </ul>
-        </nav>
-        <main>
-            <div class="customizer">
-                <span>atzeko_kolorea</span>
-                <div class="color-options">
-                    <button class="color red"></button>
-                    <button class="color green"></button>
-                    <button class="color white"></button>
-                    <button class="color black"></button>
-                </div>
-                <span>aldatu_letrak</span>
-                <div class="font-options">
-                    <button class="color red"></button>
-                    <button class="color blue"></button>
-                    <button class="color black"></button>
-                    <button class="color white"></button>
-                </div>
-            </div>
-        </main>
+    
     <form action="#" method="post">
         <label for="nombre">Izen osoa:</label>
         <input type="text" id="izenaososa" name="izenosoa" required placeholder="Sartzazu zure izen osoa">
@@ -106,30 +82,5 @@
 
         <button type="submit">Bidalia</button>
     </form>
-<nav>
-    <ul>
-        <li><a href="pertsonalizatzailea.html">Pertsonalizatzailea</a></li>
-        <li><a href="formularioa.html">Formularioa</a></li>
-        <li><a href="irudiak.html">Irudiak</a></li>
-        </ul>
-    </nav>
-    <main>
-        <div class="customizer">
-            <span>atzeko_kolorea</span>
-            <div class="color-options">
-                <button class="color red"></button>
-                <button class="color green"></button>
-                <button class="color white"></button>
-                <button class="color black"></button>
-            </div>
-            <span>aldatu_letrak</span>
-            <div class="font-options">
-                <button class="color red"></button>
-                <button class="color blue"></button>
-                <button class="color black"></button>
-                <button class="color white"></button>
-            </div>
-        </div>
-    </main>
 </body>
 </html>
