--- a/pertsonalizatzailea.html
+++ b/pertsonalizatzailea.html
@@ -11,7 +11,7 @@
         }
 
         form {
-            background-color: #f9f9f9;
+            background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -32,17 +32,8 @@
             border-radius: 4px;
         }
 
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
         button:hover {
-            background-color: #45a049;
+            background-color: white;
         }
     </style>
 </head>
