--- a/Pertsonalizazioaa.html
+++ b/Pertsonalizazioaa.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="CSS_Pertsonalizazioa_JSProiektua.css">
 </head>
 <body>
-    <header class="goiburuaOrokorra">
+    <header class="goiburua">
         <div class="barrukoFlex">
             <div class="Pertsonalizatzea">Pertsonalizatzea</div>
-            <div class="Formularioa"><a href="HTML_Formularioa_JSProiektua.html">Formularioa</a></div> 
-            <div class="Irudiak"><a href="HTML_Irudiak_JSProiektua.html">Irudiak</a></div>
+            <div class="Formularioa"><a href="formularioaa.html">Formularioa</a></div> 
+            <div class="Irudiak"><a href="irudiakk.html">Irudiak</a></div>
         </div>
     </header>
     <div id="Paragrafoa">
@@ -21,11 +21,11 @@
     </div>
     <div id="taula">
         <p>Atzeko kolorea</p>
-        <button id="arroxa" onclick="arroxa()"></button>
-        <button id="lima" onclick="lima()"></button>
-        <button id="zerua" onclick="zerua()"></button>
-        <button id="gris_iluna" onclick="gris_iluna()"></button>
-        <button type="button" id="gris_argia" onclick="gris_argia()"></button>
+        <button id="arroxa" onclick="arrosa()"></button>
+        <button id="lima" onclick="berde()"></button>
+        <button id="zerua" onclick="gris()"></button>
+        <button id="gris_iluna" onclick="grisa()"></button>
+        <button type="button" id="gris_argia" onclick="grisaa()"></button>
         <p>aldatu letrak</p>
         <button id="gorria" onclick="gorria()"></button>
         <button id="berdea" onclick="berdea()"></button>
@@ -37,13 +37,13 @@
         <button id="m" onclick="m()">M</button>
         <button id="l" onclick="l()">L</button>
         <button id="xl" onclick="xl()">XL</button>
-        <button id="A" onclick="A()">A</button>
-        <button id="T" onclick="T()">T</button>
-        <button id="C" onclick="C()">C</button>
-        <button id="F" onclick="F()">F</button>
-        <button id="M" onclick="M()">M</button>
+        <button id="A" onclick="a()">A</button>
+        <button id="T" onclick="t()">T</button>
+        <button id="C" onclick="c()">C</button>
+        <button id="F" onclick="f()">F</button>
+        <button id="M" onclick="m()">M</button>
     </div>
     
-    <script src="JS_Pertsonalizazio_JSProiektua.js"></script>
+    <script src="pertsonalizazioaa.js"></script>
 </body>
 </html>
