--- a/Pertsonalizazioaa.html
+++ b/Pertsonalizazioaa.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="CSS_Pertsonalizazioa_JSProiektua.css">
+    <title>Dokumentua</title>
+    <link rel="stylesheet" href="pertsonalizazioaa.js">
 </head>
 <body>
     <header class="goiburua">
@@ -21,11 +21,11 @@
     </div>
     <div id="taula">
         <p>Atzeko kolorea</p>
-        <button id="arroxa" onclick="arrosa()"></button>
-        <button id="lima" onclick="berde()"></button>
-        <button id="zerua" onclick="gris()"></button>
-        <button id="gris_iluna" onclick="grisa()"></button>
-        <button type="button" id="gris_argia" onclick="grisaa()"></button>
+        <button id="arrosa" onclick="arrosa()"></button>
+        <button id="berde" onclick="berde()"></button>
+        <button id="gris" onclick="gris()"></button>
+        <button id="grisa" onclick="grisa()"></button>
+        <button type="button" id="grisaa" onclick="grisaa()"></button>
         <p>aldatu letrak</p>
         <button id="gorria" onclick="gorria()"></button>
         <button id="berdea" onclick="berdea()"></button>
@@ -37,11 +37,11 @@
         <button id="m" onclick="m()">M</button>
         <button id="l" onclick="l()">L</button>
         <button id="xl" onclick="xl()">XL</button>
-        <button id="A" onclick="a()">A</button>
-        <button id="T" onclick="t()">T</button>
-        <button id="C" onclick="c()">C</button>
-        <button id="F" onclick="f()">F</button>
-        <button id="M" onclick="m()">M</button>
+        <button id="a" onclick="a()">A</button>
+        <button id="t" onclick="t()">T</button>
+        <button id="c" onclick="c()">C</button>
+        <button id="f" onclick="f()">F</button>
+        <button id="m" onclick="m()">M</button>
     </div>
     
     <script src="pertsonalizazioaa.js"></script>
